[tool.poetry]
name = "radio-test_craptout"
version = "0.1.0"
description = "Radio performance calculator"
authors = ["John Flemmer <craptout@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
black = "^24.1.0"
pint = "^0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
